<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:orientation="horizontal"
    tools:context=".GUI.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_details"
            android:textStyle="bold"
            android:textSize="32sp"
            android:id="@+id/report"/>
        <!-- extra work on in the future
        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Circle"
            android:layout_below="@id/report_image"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorAccent" />
         -->

        <ImageView
            android:id="@+id/report_image"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/white"
            android:src="@drawable/placeholder_image"
            android:contentDescription="@string/content_description" />


        <TextView
            android:id="@+id/adress_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="0dp"
            android:textSize="16sp"
            android:text="@string/Address" />




        <TextView
            android:id="@+id/severity_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="0dp"
            android:textSize="16sp"
            android:text="@string/Severity"/>

        <TextView
            android:id="@+id/date_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:textSize="16sp"
            tools:text="@string/Date" />

        <Button
            android:id="@+id/create_feedback_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Create_Feedback" />




    </LinearLayout>
</FrameLayout>