<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/required"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/photo_credibility_1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/scale1"/>

        <TextView
            android:id="@+id/dialog_credibility_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:text="@string/dialog_credibility_1"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/photo_credibility_2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/scale2"/>

        <TextView
            android:id="@+id/dialog_credibility_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:text="@string/dialog_credibility_2"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/photo_credibility_3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/scale3"/>

        <TextView
            android:id="@+id/dialog_credibility_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:text="@string/dialog_credibility_3"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/photo_credibility_4"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/scale4"/>

        <TextView
            android:id="@+id/dialog_credibility_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:text="@string/dialog_credibility_4"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/photo_credibility_5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/scale5"/>

        <TextView
            android:id="@+id/dialog_credibility_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_margin="5dp"
            android:text="@string/dialog_credibility_5"
            android:textSize="15sp" />


    </LinearLayout>
</LinearLayout>