<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="157dp"
                android:scaleType="fitXY"
                android:src="@drawable/login_2" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_student_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_user_id"
            android:hint="@string/student_Id"
            app:met_iconPadding="0dp"
            app:met_primaryColor="@color/colorBlack"
            app:met_textColor="@color/colorBlack"
            app:met_textColorHint="@color/colorBlack" />

        <!--com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edt_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_textColorHint="@color/colorBlack"
            app:met_textColor="@color/colorBlack"
            app:met_primaryColor="@color/colorBlack"
            app:met_iconPadding="0dp"
            android:drawableRight="@drawable/ic_lock"/-->




    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_create_account"
        android:text="@string/create_account"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_margin="4dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="\n&#169;2018-2021, IRES: U.S.-Mexico Interdisciplinary Research Collaboration for
        Smart Cities investigators and contributing participants.
        Licensed under the GNU General Public License v3.0.
        This material is based upon work supported by the National Science
        Foundation (NSF) Award #1658733 IRES: US-Mexico
        Interdisciplinary Collaboration for Smart Cities." />

</LinearLayout>